# xromotion

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
msg/: BezierCurve.msg
src/: animation_execution.py  execute_motion.py  save_keyframe.py
src/expressive_motion_generation/: __init__.py  animation.py  animation_execution.py  effects.py  expressive_planner.py  trajectory.py  trajectory_planner.py  utils.py
